--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,9 @@
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.10",
     "sequelize": "^6.37.7",
-    "sequelize-cli": "^6.6.3"
+    "sequelize-cli": "^6.6.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "yamljs": "^0.3.0"
   }
 }
